<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:columnCount="3"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="10dp"
        android:layout_row="0"
        android:src="@drawable/beforelogin_background" />

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="15dp"
        android:layout_row="0"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip" >

        <TextView
            android:id="@+id/login_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/login_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:layout_marginTop="10dp"
            android:text="@string/login_label_password" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignRight="@id/password_edit"
            android:layout_below="@id/password_edit"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg_background"
            android:text="@string/login_label_signin"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</GridLayout>